--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-spring/web": "^9.7.3",
     "babel-plugin-macros": "^3.1.0",
     "cobe": "^0.6.3",
+    "dotenv": "^16.3.1",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
