--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/joy": "^5.0.0-beta.9",
     "@mui/material": "^5.14.17",
     "@react-spring/web": "^9.7.3",
+    "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "cobe": "^0.6.3",
     "dotenv": "^16.3.1",
