--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@material-ui/styles": "^4.11.5",
     "@mui/joy": "^5.0.0-beta.9",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.15.2",
+    "@mui/styles": "^5.15.2",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
