--- a/package.json
+++ b/package.json
@@ -10,41 +10,42 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fontsource/inter": "^5.0.16",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@material-ui/styles": "^4.11.5",
-    "@mui/joy": "^5.0.0-beta.9",
-    "@mui/material": "^5.15.2",
-    "@mui/styles": "^5.15.2",
+    "@mui/joy": "^5.0.0-beta.23",
+    "@mui/material": "^5.15.5",
+    "@mui/styles": "^5.15.5",
     "@react-spring/web": "^9.7.3",
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
     "cobe": "^0.6.3",
+    "create-react-app": "^5.0.1",
     "dotenv": "^16.3.1",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0",
-    "sass": "^1.69.5"
+    "react-router-dom": "^6.21.2",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^2.7.17",
-    "@types/node": "^20.6.4",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
+    "@types/mapbox-gl": "^2.7.19",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.1"
   }
 }
